--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@
                     <i class="fas fa-wallet"></i>
                 </div>
                 <h3>All Bill Payments</h3>
-                <p>Water, Gas, Landline & more</p>
+                <p>Landline & more</p>
             </div>
         </div>
 
